@@ -1,36 +1,76 @@
 package base;
 
+import java.lang.reflect.Method;
+import java.util.List;
+
+import org.slf4j.Logger;
+import org.testng.ITestResult;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeMethod;
 
+import com.aventstack.extentreports.ExtentReports;
+import com.aventstack.extentreports.ExtentTest;
 import com.microsoft.playwright.Browser;
+import com.microsoft.playwright.BrowserContext;
 import com.microsoft.playwright.BrowserType;
 import com.microsoft.playwright.Page;
 import com.microsoft.playwright.Playwright;
+
+import utils.ExtentManager;
+import utils.LoggerUtil;
+import utils.ObjectRepository;
+import utils.ScreenshotUtil;
 
 public class BaseTest {
 
 	protected Playwright playwright;
 	protected Browser browser;
+	protected BrowserContext context;
 	protected Page page;
+	protected Logger log = LoggerUtil.getLogger(getClass());
+	protected ExtentReports extent;
+	public ExtentTest test;
 
 	@BeforeMethod
-	public void setUp() {
+	public void setUp(Method method) {
+		// Initialize ExtentReports
+		extent = ExtentManager.getInstance();
+		test = extent.createTest(method.getName());
+		test.info("Starting test: " + method.getName());
+		
 		playwright = Playwright.create();
-		browser = playwright.chromium().launch(new BrowserType.LaunchOptions().setHeadless(false)
-				.setArgs(java.util.Arrays.asList("--start-maximized")));
-		page = browser.newPage();
-		// Ensure the viewport matches a typical maximized window
-		page.setViewportSize(1920, 1080);
-
+		browser = playwright.chromium().launch(new BrowserType.LaunchOptions().setHeadless(false).setArgs(List.of("--start-maximized")));
+		context = browser.newContext(new Browser.NewContextOptions().setViewportSize(null));
+		page = context.newPage();
+		log.info("Browser launched successfully");
+		
+		ObjectRepository objRepo = new ObjectRepository();
+		// Navigate to base URL
+		page.navigate(objRepo.baseURL);
+		log.info("Navigated to URL: " + objRepo.baseURL);
 	}
 
-	@AfterMethod
-	public void tearDown() {
-		if (browser != null)
-			browser.close();
+	//@AfterMethod
+	public void tearDowon(ITestResult result) {
+		log.info("Closing the browser");
+		
+		if(result.getStatus() == ITestResult.FAILURE) {
+			test.fail("Test Failed: " + result.getThrowable());
+			String screenshotPath = ScreenshotUtil.takeScreenshotPath(page, result.getName());
+			test.addScreenCaptureFromPath(screenshotPath);
+		} else if(result.getStatus() == ITestResult.SUCCESS) {
+			test.pass("Test Passed");
+		} else if(result.getStatus() == ITestResult.SKIP) {
+			test.skip("Test Skipped: " + result.getThrowable());
+		}
+		
+		extent.flush();
+		
+		/*
+		 * if (browser != null) browser.close();
+		 */
 		if (playwright != null)
-			playwright.close();
+			browser.close();
 
 	}
 
